[tool.poetry]
name = "cyberml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
jupyter = "^1.0.0"
scikit-learn = "^1.3.1"
openpyxl = "^3.1.2"
xgboost = "^2.0.1"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
